# agentforge-studio

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.sh
backend/: __init__.py  main.py
backend/agents/: __init__.py  accessibility_agent.py  analytics_agent.py  backend_agent.py  base_agent.py  designer_agent.py  error_handler.py  frontend_agent.py  helper.py  intermediator.py  optimizer_agent.py  orchestrator.py  planner.py  reviewer.py  security_agent.py  tester.py
backend/agents/prompts/: accessibilityagent_prompt.txt  analyticsagent_prompt.txt  backendagent_prompt.txt  designeragent_prompt.txt  errorhandler_prompt.txt  frontend_prompt.txt  helper_prompt.txt  intermediator_prompt.txt  optimizeragent_prompt.txt  planner_prompt.txt  reviewer_prompt.txt  securityagent_prompt.txt  tester_prompt.txt
backend/api/: __init__.py  routes.py  server.py  websocket.py
backend/core/: __init__.py  agent_registry.py  api_key_manager.py  config.py  crash_recovery.py  error_recovery.py  event_emitter.py  file_lock_manager.py  flow_controller.py  git_manager.py  graceful_degradation.py  loop_detector.py  message_bus.py  orchestrator.py  preview_server.py  project_manager.py  task_dispatcher.py  task_queue.py  timeout_manager.py  workflow_engine.py  workspace_manager.py
backend/core/ai_clients/: __init__.py  anthropic_client.py  base_client.py  gemini_client.py  openai_client.py  provider_manager.py
backend/core/memory/: __init__.py  application_memory.py  context_builder.py  memory_manager.py  project_memory.py
backend/models/: __init__.py  memory.py  messages.py  project.py  schemas.py
data/: app_memory.db
docs/: README.md  agents.md  api.md  architecture.md  workflow.md
frontend/: README.md  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ActionBar.tsx  AgentActivity.tsx  ChatPanel.tsx  FileExplorer.tsx  FileViewer.tsx  Header.tsx  MessageBubble.tsx  PreviewPanel.tsx  StageIndicator.tsx  TypingIndicator.tsx
frontend/src/context/: ProjectContext.tsx
frontend/src/hooks/: useChat.ts  useProject.ts  useWebSocket.ts
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
outputs/: .gitkeep
tests/: __init__.py  test_agents.py  test_ai_clients.py  test_api_key_manager.py  test_error_handling.py  test_full_flow.py  test_memory.py  test_message_bus.py  test_new_agents.py  test_orchestrator.py
workspaces/: .gitkeep  README.md
